ImpressCMS ChangeLog

=== ImpressCMS 1.2.3 RC2 ===
Release date:  Oct 2010
Revision:
DB Version: 40
Build Version: 39

http://sourceforge.net/apps/trac/impresscms/query?status=closed&group=component&order=priority&col=id&col=summary&col=milestone&col=status&col=type&col=priority&col=component&milestone=ImpressCMS+1.2.3

=== ImpressCMS 1.2.3 RC ===
Release date: 24 Sep 2010
Revision: 20198
DB Version: 40
Build Version: 38

=== ImpressCMS 1.2.3 Beta ===
Release date: 17 Sep 2010
Revision: 20154
DB Version: 40
Build Version: 37

Adding support for PHP 5.3
Maintenance release, addresses #462, #480 and #482, #493
Security Fix: Blind SQLi & Path disclosure in search.php & settingmanager (if install folder left on server)

=== ImpressCMS 1.2.2 Final ===
Release date: 16 Jul 2010
Revision: 19862
DB Version: 40
Build Version: 36

Addresses http://secunia.com/advisories/40522

=== ImpressCMS 1.2.1 Final ===
Release date: 14 Mar 2010
Revision: 19094
DB Version: 39
Build Version: 35

http://trac.impresscms.org/core/query?status=closed&group=resolution&milestone=ImpressCMS+1.2.1


=== ImpressCMS 1.2.1 RC ===
Release date: 1 Mar 2010
Revision: 9881
DB Version: 39
Build Version: 34

http://trac.impresscms.org/core/query?status=closed&group=resolution&milestone=ImpressCMS+1.2.1

=== ImpressCMS 1.2.1 Beta ===
Release date: 11 Feb 2010
Revision: 9841
DB Version: 39
Build Version: 33

* #913: Fixing isue with Code / Pre tag (thomas)
* #874: Fixing error on Admin Installed Modules Block about calling a method from a non-object with annonymous users. (nekro)
* #875: Fixing error on Admin CP Block about calling a method from a non-object with annonymous users. (nekro)
* #876: Adding a default value for the field Weight of the blocks. (nekro)
* #806: Adding requited labels to block, blockposition and symlink objects. (nekro)
* #879: Removing rank images from the uploads folder. (nekro)
* #867: installer is now checking for PHP 5.3 (phoenyx)