@@ -34,8 +34,8 @@ $modversion = array(
 	'image'=> "images/system_slogo.png", /* for backward compatibility */
 
 /**  Development information */
-	'status_version'=> "RC",
-	'status'=> "RC",
+	'status_version'=> "Final",
+	'status'=> "Final",
 	'date'=> "",
 	'author_word'=> "",
 
@@ -68,7 +68,7 @@ $modversion['autotasks'][] = array(
 /** Manual */
 $modversion['manual']['wiki'][] = "<a href='http://wiki.impresscms.org/index.php?title=Extended_Profile/"._LANGCODE."' target='_blank'>"._LANGNAME."</a>";
 
-$modversion['warning'] = _CO_ICMS_WARNING_RC;
+$modversion['warning'] = _CO_ICMS_WARNING_FINAL;
 
 /** Administrative information */
 $modversion['hasAdmin'] = true;
