@@ -1,8 +1,8 @@
-ImpressCMS 1.2.3 RC2 release notes
+ImpressCMS 1.2.3 Final release notes
 ==================================
 
-The ImpressCMS Project is very proud to announce an RC version of its 1.2.3 release! 
-ImpressCMS 1.2.3 RC2 is a maintenance release and as such, should not be used on production sites.
+The ImpressCMS Project is very proud to announce a Final (Stable) version of its 1.2.3 release! 
+ImpressCMS 1.2.3 Final is a stable release and as such, can be used on production sites.
 
 Please see the full [[Change Log]] for details in docs/changelog.txt.
 
@@ -25,7 +25,7 @@ This release can be downloaded from the [https://sourceforge.net/projects/impres
 You can easily get ImpressCMS using SVN. Instructions about this can be found here: [[Install_and_update_using_SVN]].
 
 The path for this release is the following:
-https://impresscms.svn.sourceforge.net/svnroot/impresscms/core/releases/impresscms_1.2.3_rc2/
+https://impresscms.svn.sourceforge.net/svnroot/impresscms/core/releases/impresscms_1.2.3_final/
 
 If you feel like getting the latest "edge" version, you can checkout the core trunk at :
 
